test/samples/valid/interp/fresh_mem.maruir
struct Foo {
	x: uint32;
	y: uint32;
}

fun alloc_foo<M>(x: uint32, y: uint32): Foo *M
locals res: Foo *M;
{
	entry:
		res := alloc Foo in M;
		store x in res.x;
		store y in res.y;
		return res;
}

fun main()
locals
	f1: Foo *M1,
	f2: Foo *M2;
{
	entry:
		f1 := call alloc_foo<fresh M1>(uint32(1), uint32(2));
		f2 := call alloc_foo<fresh M2>(uint32(3), uint32(4));
		return;
		
}
