test/samples/invalid/tc/fun_call_poly2.maruir
fun copy<M1, M2>(src: uint16[] *M1): uint16[] *M2

fun main()
locals src: uint16[] *#memory, dst: uint16[] *#storage;
{
    entry:
    dst := call copy<#memory, #calldata>(src);
    return;
}